--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce BD</title>
+    <!-- css style sheet -->
+    <link rel="stylesheet" href="style.css">
     <!-- bootstarp style seet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -42,7 +44,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <div class="row d-flex align-items-center">
+                  <div class="row panda-carosal-1  d-flex align-items-center">
                       <div class="col-7">
                           <h1>Cool Dude Headphone</h1>
                           <p> This is the best in the world for people who just want to waste time in front of funky world</p>
@@ -55,7 +57,7 @@
                   </div>
                 </div>
                 <div class="carousel-item ">
-                  <div class="row d-flex align-items-center ">
+                  <div class="row panda-carosal-1 d-flex align-items-center ">
                       <div class="col-7">
                           <h1>Cool Dude Headphone</h1>
                           <p> This is the best in the world for people who just want to waste time in front of funky world</p>
@@ -68,7 +70,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <div class="row d-flex align-items-center">
+                  <div class="row panda-carosal-1 d-flex align-items-center">
                       <div class="col-7">
                           <h1>Cool Dude Headphone</h1>
                           <p> This is the best in the world for people who just want to waste time in front of funky world</p>
@@ -96,32 +98,32 @@
     <main>
         <div class="container mt-5 ">
         <div class="row">
-               <div class="col-4 rounded-3">
-                <div style="background-color: orange;" class="d-flex align-items-center justify-content-between">
+               <div class="col-12 col-md-6 col-lg-4 rounded-3">
+                <div style="background-color: orange;" class="d-flex align-items-center justify-content-between categorie-1">
                     <div class="">
-                       <h1>Watch</h1>
+                       <h1 class="text-white">Watch</h1>
                     </div>
-                    <div class="">
+                    <div class="cat-1">
                       <img src="images/categories/watch.png" alt="Watch">
                     </div>
                 </div>
                </div>
-               <div class="col-4 rounded-3">
-                <div style="background-color: orchid;" class="d-flex align-items-center justify-content-between">
+               <div class="col-12 col-md-6 col-lg-4 rounded-3">
+                <div style="background-color: orchid;" class="d-flex align-items-center justify-content-between categorie-2">
                     <div class="">
-                       <h1>Bag</h1>
+                       <h1 class="text-white">Bag</h1>
                       </div>
-                    <div class="">
+                    <div class="cat-1">
                       <img src="images/categories/bag.png" alt="bag">
                     </div>
                   </div>
                </div>
-               <div class="col-4">
-                <div  style="background-color: blue;" class="d-flex align-items-center justify-content-between ">
+               <div class="col-12 col-md-6 col-lg-4">
+                <div  style="background-color: blue;" class="d-flex align-items-center justify-content-between categorie-3">
                     <div class="">
-                       <h1>shoes</h1>
+                       <h1 class="text-white">Shoes</h1>
                     </div>
-                    <div class="">
+                    <div class="cat-1">
                       <img src="images/categories/shoes.png" alt="Shoes">
                     </div>
                   </div>
@@ -131,39 +133,39 @@
     <div class="container">
         <h3>Shoes</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-              <div class="card h-100">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                 <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Supply 350</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
+                <div>
+                  <button class="btn btn-warning">Buy Now</button>
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="card h-100">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                 <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Nike 360</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
+                <div>
+                    <button class="btn btn-warning">Buy Now</button>
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="card h-100">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                 <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <h5 class="card-title">Red Airmax</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
+                <div>
+                    <button class="btn btn-warning">Buy Now</button>
                 </div>
               </div>
             </div>
@@ -172,39 +174,39 @@
     <div class="container">
         <h3>Shoes</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-              <div class="card h-100">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                 <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Red taltu Bag</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
+                <div>
+                    <button class="btn btn-warning">Buy Now</button>
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="card h-100">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                 <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Blue Niltu Bag</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
+                <div>
+                    <button class="btn btn-warning">Buy Now</button>
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="card h-100">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                 <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <h5 class="card-title">Black Kaltu bag</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
+                <div>
+                 <button class="btn btn-warning">Buy Now</button>
                 </div>
               </div>
             </div>
@@ -212,7 +214,7 @@
     </div>
     </main>
     <footer>
-
+        <p>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
