--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="container">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                <div class="carousel-item active">
+                <div class="carousel-item px-5 py-2 active">
                   <div class="row panda-carosal-1  d-flex align-items-center">
                       <div class="col-7">
                           <h1>Cool Dude Headphone</h1>
@@ -56,10 +56,10 @@
                     </div>
                   </div>
                 </div>
-                <div class="carousel-item ">
+                <div class="carousel-item p-5 ">
                   <div class="row panda-carosal-1 d-flex align-items-center ">
                       <div class="col-7">
-                          <h1>Cool Dude Headphone</h1>
+                          <h1>Mega LCD TV For Sports</h1>
                           <p> This is the best in the world for people who just want to waste time in front of funky world</p>
                           <h1>$420</h1>
                           <button class="btn btn-primary">Buy Now</button>
@@ -69,10 +69,10 @@
                     </div>
                   </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item p-5">
                   <div class="row panda-carosal-1 d-flex align-items-center">
                       <div class="col-7">
-                          <h1>Cool Dude Headphone</h1>
+                          <h1>X-Box for your living room</h1>
                           <p> This is the best in the world for people who just want to waste time in front of funky world</p>
                           <h1>$420</h1>
                           <button class="btn btn-primary">Buy Now</button>
@@ -214,7 +214,7 @@
     </div>
     </main>
     <footer>
-        <p>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+        <p class="text-center">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
