--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>Panda Commerce BD</title>
     <!-- css style sheet -->
     <link rel="stylesheet" href="style.css">
+    <!-- font awesome link -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- bootstarp style seet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="" >
@@ -27,23 +29,23 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Shoes</a>
+                        <a class="nav-link" href="#shoes">Shoes</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Backpack</a>
+                        <a class="nav-link" href="#bags">Backpack</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Subscribe</a>
+                        <a class="nav-link" href="#subscribe">Subscribe</a>
                       </li>
                     </ul>
                   </div>
                 </div>
               </nav>
         </div>
-        <section class="container">
+        <section class="container mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                <div class="carousel-item px-5 py-2 active">
+                <div class="carousel-item px-5 py-4 active">
                   <div class="row panda-carosal-1  d-flex align-items-center">
                       <div class="col-7">
                           <h1>Cool Dude Headphone</h1>
@@ -56,7 +58,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="carousel-item p-5 ">
+                <div class="carousel-item px-5 py-4 ">
                   <div class="row panda-carosal-1 d-flex align-items-center ">
                       <div class="col-7">
                           <h1>Mega LCD TV For Sports</h1>
@@ -69,7 +71,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="carousel-item p-5">
+                <div class="carousel-item px-5 py-4">
                   <div class="row panda-carosal-1 d-flex align-items-center">
                       <div class="col-7">
                           <h1>X-Box for your living room</h1>
@@ -130,7 +132,7 @@
                </div>
         </div>
     </div>
-    <div class="container">
+    <section id="shoes" class="container">
         <h3>Shoes</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col-12 col-md-6 col-lg-4">
@@ -170,50 +172,61 @@
               </div>
             </div>
           </div>
-    </div>
-    <div class="container">
-        <h3>Shoes</h3>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="card shadow p-3 mb-5 bg-body rounded h-100">
-                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Red taltu Bag</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+    </section>
+    <section id="bags" class="container">
+            <h3>Bags</h3>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col-12 col-md-6 col-lg-4">
+                  <div class="card shadow p-3 mb-5 bg-body rounded h-100">
+                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red taltu Bag</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-warning">Buy Now </button>
+                    </div>
+                  </div>
                 </div>
-                <div>
-                    <button class="btn btn-warning">Buy Now</button>
+                <div class="col-12 col-md-6 col-lg-4">
+                  <div class="card shadow p-3 mb-5 bg-body rounded h-100">
+                    <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Blue Niltu Bag</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                  <div class="card shadow p-3 mb-5 bg-body rounded h-100">
+                    <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Black Kaltu bag</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div>
+                     <button class="btn btn-warning">Buy Now</button>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="card shadow p-3 mb-5 bg-body rounded h-100">
-                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Blue Niltu Bag</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                <div>
-                    <button class="btn btn-warning">Buy Now</button>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="card shadow p-3 mb-5 bg-body rounded h-100">
-                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Black Kaltu bag</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                <div>
-                 <button class="btn btn-warning">Buy Now</button>
-                </div>
-              </div>
-            </div>
-          </div>
-    </div>
+    </section>
+    <section  class="container">
+        <div class="subscribe-height rounded-3 bg-warning d-flex justify-content-center align-items-center">
+        <div id="subscribe">
+            <h1>LET'S STAY IN TOUCH</h1>
+        <p>Get updates on sales, specials and more</p>
+        <input type="e-mail">
+        <br>
+        <button class="btn btn-warning">Subscribe</button>
+        </div>
+        </div>
+    </section>
     </main>
-    <footer>
+    <footer class="mt-3">
         <p class="text-center">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
     </footer>
     
